--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-<form th:action="@{/response}" method="post">
-	<label for="range">徒歩範囲~分以内</label>
-	<input type="number" id="range" name="range"><br>
+<form th:action="@{/}" method="post">
+	<label for="minutes">徒歩範囲~分以内</label>
+	<input type="number" id="minutes" name="minutes"><br>
 	
 	<label for="purpose">検索内容</label>
 	<input type="text" id="purpose" name="purpose">
@@ -18,12 +18,16 @@
 
 <div id="map"></div>
 
-<p th:text="${mapDataJson}"></p>
+<p th:text="${allPlacesString}"></p>
 
-<div th:if="${mapDataJson} != null">
+<div th:if="${allPlacesString} != null">
 	<script th:inline="javascript">
-		let mapDataJson = /*[[${mapDataJson}]]*/ [];
+		let allPlacesStrnig = /*[[${allPlacesString}]]*/ [];
+		let allPlacesJson = JSON.parse(allPlacesStrnig);
 	</script>
+</div>
+<div th:if="${allPlacesString} == null">
+	<p>aaaa</p>
 </div>
 
 <script th:src="@{/js/map.js}" type="text/javascript"></script>
