--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,41 +1,80 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
-<meta charset="UTF-8">
-<title>ChatGPT</title>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+	<meta charset="UTF-8">
+	<title>place_by_purpose</title>
 </head>
+
 <body>
+	<form th:action="@{/search-center}" method="post">
+		<label for="center">場所検索</label>
+		<input type="text" id="center" name="centerName">
+		<button type="submit">場所検索</button>
+	</form>
 
-<form th:action="@{/}" method="post">
-	<label for="minutes">徒歩範囲~分以内</label>
-	<input type="number" id="minutes" name="minutes"><br>
+	<div th:if="${centerCandidateListDto} != null">
+		<table>
+			<tr>
+				<th>候補</th>
+				<th>選択</th>
+			</tr>
+			<tr th:each="centerCandidate : ${centerCandidateListDto}">
+				<td>
+					<span th:text="${centerCandidate.facilityName}"></span><br>
+					<span th:text="${centerCandidate.address}"></span>
+				</td>
+				<td>
+					<form th:action="@{/select-center}" method="post">
+						<button type="submit">選択</button>
+						
+						<input type="hidden" name="facilityName" th:value="${centerCandidate.facilityName}">
+						<input type="hidden" name="lat" th:value="${centerCandidate.lat}">
+						<input type="hidden" name="lng" th:value="${centerCandidate.lng}">
+						
+					</form>
+				</td>
+			</tr>
+		</table>
+	</div>
+
+	<div th:if="${centerDataDto} != null">
+		<form th:action="@{/}" method="post">
+			<label for="minutes"><span th:text="${centerDataDto.facilityName}"></span>から徒歩範囲~分以内</label>
+			<input type="number" id="minutes" name="minutes"><br>
 	
-	<label for="purpose">検索内容</label>
-	<input type="text" id="purpose" name="purpose">
-	<button type="submit">送信</button>
-</form>
+			<label for="purpose">検索内容</label>
+			<input type="text" id="purpose" name="purpose">
+			<button type="submit">送信</button>
+			
+				<input type="hidden" name="facilityName" th:value="${centerDataDto.facilityName}">
+				<input type="hidden" name="lat" th:value="${centerDataDto.lat}">
+				<input type="hidden" name="lng" th:value="${centerDataDto.lng}">
+			
+		</form>
+	</div>
 
-<div id="map"></div>
+	<div id="map"></div>
 
-<p th:text="${allPlacesString}"></p>
+	<p th:text="${allPlacesString}"></p>
 
-<div th:if="${allPlacesString} != null">
-	<script th:inline="javascript">
-		let allPlacesStrnig = /*[[${allPlacesString}]]*/ [];
-		let allPlacesJson = JSON.parse(allPlacesStrnig);
-	</script>
-</div>
-<div th:if="${allPlacesString} == null">
-	<p>aaaa</p>
-</div>
+	<div th:if="${allPlacesString} != null">
+		<script th:inline="javascript">
+			let allPlacesStrnig = /*[[${allPlacesString}]]*/[];
+			let allPlacesJson = JSON.parse(allPlacesStrnig);
+		</script>
+	</div>
+	<div th:if="${allPlacesString} == null">
+		<p>aaaa</p>
+	</div>
 
-<script th:src="@{/js/map.js}" type="text/javascript"></script>
+	<script th:src="@{/js/map.js}" type="text/javascript"></script>
 
-<div th:if="${googleApiKey != null}">
-	<script async defer
-	        th:src="'https://maps.googleapis.com/maps/api/js?key=' + ${googleApiKey} + '&callback=map'">
-	</script>
-</div>
+	<div th:if="${googleApiKey != null}">
+		<script async defer th:src="'https://maps.googleapis.com/maps/api/js?key=' + ${googleApiKey} + '&callback=map'">
+		</script>
+	</div>
 </body>
+
 </html>
