--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,9 @@
 
 <body>
 	<form th:action="@{/search-center}" method="post">
-		<label for="center">場所検索</label>
-		<input type="text" id="center" name="centerName">
-		<button type="submit">場所検索</button>
+		<label for="center">出発場所検索</label>
+		<input type="text" id="center" name="centerName" required>
+		<button type="submit">検索</button>
 	</form>
 
 	<div th:if="${centerCandidateListDto} != null">
@@ -28,45 +28,73 @@
 				<td>
 					<form th:action="@{/select-center}" method="post">
 						<button type="submit">選択</button>
-						
+
 						<input type="hidden" name="facilityName" th:value="${centerCandidate.facilityName}">
 						<input type="hidden" name="lat" th:value="${centerCandidate.lat}">
 						<input type="hidden" name="lng" th:value="${centerCandidate.lng}">
-						
+
 					</form>
 				</td>
 			</tr>
 		</table>
+		
+
+		<form th:action="@{/}" method="get">
+			<button type="submit">最初から</button>
+		</form>
+		
 	</div>
 
 	<div th:if="${centerDataDto} != null">
 		<form th:action="@{/}" method="post">
-			<label for="minutes"><span th:text="${centerDataDto.facilityName}"></span>から徒歩範囲~分以内</label>
-			<input type="number" id="minutes" name="minutes"><br>
-	
+			<p><span th:text="${centerDataDto.facilityName}"></span>から</p>
+
+			<div class="transportation-minutes">
+				<div class="select-transportation">
+					<label for="transportation">交通手段</label>
+					<select id="transportation" name="transportation">
+						<option value="walk">徒歩</option>
+						<option value="bicycle">自転車</option>
+						<option value="bike">バイク</option>
+					</select>
+				</div>
+
+				<div class="select-minutes">
+					<label for="minutes">～分</label>
+					<input type="number" id="minutes" name="minutes" min="1" max="60" required><br>
+				</div>
+			</div>
+
 			<label for="purpose">検索内容</label>
 			<input type="text" id="purpose" name="purpose">
 			<button type="submit">送信</button>
-			
-				<input type="hidden" name="facilityName" th:value="${centerDataDto.facilityName}">
-				<input type="hidden" name="lat" th:value="${centerDataDto.lat}">
-				<input type="hidden" name="lng" th:value="${centerDataDto.lng}">
-			
+
+			<input type="hidden" name="facilityName" th:value="${centerDataDto.facilityName}">
+			<input type="hidden" name="lat" th:value="${centerDataDto.lat}">
+			<input type="hidden" name="lng" th:value="${centerDataDto.lng}">
+
 		</form>
+		
+
+		<form th:action="@{/}" method="get">
+			<button type="submit">最初から</button>
+		</form>
+		
 	</div>
 
-	<div id="map"></div>
-
-	<p th:text="${allPlacesString}"></p>
 
 	<div th:if="${allPlacesString} != null">
+		<div id="map"></div>
+
 		<script th:inline="javascript">
 			let allPlacesStrnig = /*[[${allPlacesString}]]*/[];
 			let allPlacesJson = JSON.parse(allPlacesStrnig);
 		</script>
-	</div>
-	<div th:if="${allPlacesString} == null">
-		<p>aaaa</p>
+		
+		<form th:action="@{/}" method="get">
+			<button type="submit">最初から</button>
+		</form>
+		
 	</div>
 
 	<script th:src="@{/js/map.js}" type="text/javascript"></script>
@@ -75,6 +103,7 @@
 		<script async defer th:src="'https://maps.googleapis.com/maps/api/js?key=' + ${googleApiKey} + '&callback=map'">
 		</script>
 	</div>
+
 </body>
 
 </html>
